Fix a number of interface issues (#3775)
* Improve the look of transposed tables

* Ensure the progressbar container is always shown

Otherwise the results move when a progressbar is inserted

* Change the table and header color when an analysis error occurs

* Fix the separator of paired analyses

* Fix paired samples ttest table not showing all variable pairs

* Add unit test for paired samples ttest bug

--- a/JASP-Desktop/html/css/darkTheme-jasp.css
+++ b/JASP-Desktop/html/css/darkTheme-jasp.css
@@ -383,7 +383,7 @@ div.jasp-image-image.no-data.error {
   opacity: 0.33
 }
 
-.error-state {
+.error-state:not(.jasp-analysis), .jasp-analysis.error-state>.jasp-analysis {
   color: darkgray;
 }
 
